# code-quality

./: .gitignore  README.md  pip_update.bat  pyproject.toml  requirements.txt  structuring.md
.claude/: settings.json
.claude/commands/: code-quality-installation.md  code-quality-loop.md  code-quality.md  format-markdown.md  python-static-analysis-suite.md  review-scripts.md  tools-installation.md  visual-flow.md
.claude/scripts/: python_static_analysis_suite.py
docs/: todo.md
docs/comparison/: visual-flow.md
docs/general/: code-simplifier.md  more_potential_sources.md  simplify.md  superpowers_code_reviewer.md
docs/todo/: apply_tools.py  code_quality.py  encountered.md  todo.md
guidelines/: _candidates.md  basic_logic.md  visual_flow.md  visual_flow_lean.md
installation/: code_quality_install.bat  code_quality_install.py
instructions/code_quality_guidelines/: structuring.md  visual_flow.md
sandbox/: _system_message.txt  _user_message.txt  claude_p.py  critic_prompt.md  install_static_analysis_tools.py  request_create_code_review_loop.md  visual-flow.old.md
scripts/: format_markdown.py  install-tools.py  visual_flow_applier.py  visual_flow_prompt.md
scripts/code_quality_loop/: code_quality_loop.md  code_quality_loop.py  common.py  critic.py  parent_context.py  phase4-tdd.md  rewriter.py  senior_se.py  senior_se_next_issue.py  senior_se_triage.py
scripts/format_markdown/: __init__.py  __main__.py  fix_heading_and_list_spacing.py  replace_with_ascii.py  wrap_long_lines.py
tests/code_quality_loop/: conftest.py  test_call_llm.py  test_common.py  (+5 more)
(+66 files in other folders)
